2011-06-30  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/chain.c (urj_tap_chain_connect): Fix param count check with parallel
    cables after the refactorizing into dedicated funcs.  Fix by Steve Tell.

  * src/urjtag.pc.in (Libs.private): Add ftdi/usb libs after they were removed
    from the global LIBS.

2011-06-29  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable.c (urj_tap_cable_wait): Tweak code style to silence warnings
    thrown up by gcc-4.6 and cause build failures with -Werror.

  * src/cmd/Makefile.am (generated_cmd_list.h): Always update the file to
    avoid constant generation loops where other files are newer, but not
    a different list of commands.

  * src/cmd/cmd_bfin.c (cmd_bfin_run): Make sure the part is in emulation mode
    first before attempting a reset (since we need to be).

  * src/cmd/cmd_bfin.c (cmd_bfin_help): Update help description to include
    all of the sub-commands actually supported.  Pull out the const strings
    (things you actually type) out of the translated string.

  * src/cmd/cmd.h (urj_cmd_t.complete): Add a new arg for the token list.
  * src/cmd/cmd_cmd.c (urj_cmd_complete): Pass down tokenized list for
    handlers to work off of if they want info about previous tokens.
  * src/cmd/cmd_bfin.c, src/cmd/cmd_cable.c, src/cmd/cmd_cmd.c,
    src/cmd/cmd_debug.c, src/cmd/cmd_endian.c, src/cmd/cmd_flashmem.c,
    src/cmd/cmd_get.c, src/cmd/cmd_help.c, src/cmd/cmd_include.c,
    src/cmd/cmd_initbus.c, src/cmd/cmd_instruction.c, src/cmd/cmd_print.c,
    src/cmd/cmd_readmem.c, src/cmd/cmd_salias.c, src/cmd/cmd_set.c,
    src/cmd/cmd_shift.c, src/cmd/cmd_test.c: Add new tokens arg to completion
    handlers.

  * src/cmd/cmd_endian.c (cmd_endian_complete): Add matches based on existing
    local array of strings.

  * src/cmd/cmd.h (urj_completion_mayben_add_matches_num,
    urj_completion_mayben_add_matches): Helpers for adding arrays of matches.